<resources>
    <string name="app_name">Whizzo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_chat">Chat</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_a_new_chat">Create a New Chat</string>
    <string name="chat_message_hint">Chat Message</string>
    <string name="cs2230">CS2230</string>
    <string name="cs2020">CS2020</string>
    <string name="cs2310">CS2310</string>
    <string name="cs2010">CS2010</string>
    <string name="cs2130">CS2130</string>
    <string name="cs2410">CS2410</string>
    <string name="title">Title</string>
    <string name="secondary_text">Title</string>
    <string name="supporting_text">Description</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="whizzo">Whizzo</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="top_posts">Top Posts</string>
    <string name="your_subscribed_threads">Your Subscribed Threads</string>
</resources>